# coms4181_final

./: CMakeLists.txt  cJSON.c  changepw.c  generate_key.sh  get_server_certs.h  getcert  getcert.c  main.c  mock.json  mock_request.json  openssl.cnf  recvmsg.c  send_request.c  send_request.h  send_request_mock.c  sendmsg.c  server_handler.c  server_listener.c
certs/: cert.pem
csr/: csr.pem
final_project/: hashpassword  hashpassword.c  init.sh
final_project/clients/philosophicotheological/: getcert
final_project/clients/pockwood/: changepw
final_project/server/passwords/: addleness.pwd  analects.pwd  annalistic.pwd  anthropomorphologically.pwd  blepharosphincterectomy.pwd  corector.pwd  durwaun.pwd  dysphasia.pwd  encampment.pwd  endoscopic.pwd  exilic.pwd  forfend.pwd  gorbellied.pwd  (+22 more)
keys/: key.pem  public.pem
server/container1/: server_handler.c  storemsg.h
server/container2/: Makefile  changepwd-tests.sh  changepwd.c  isuservalid-tests.sh  isuservalid.c
server/container3/: Makefile  createCA.sh  getcertificate-tests.sh  getcertificate.c  server.out  setcertificate-tests.sh  setcertificate.c  signCert.sh
server/container4/: Makefile  getnextmsg-tests.sh  getnextmsg.c  hasmsg-tests.sh  hasmsg.c  storemsg-tests.sh  storemsg.c
server/single-container-server/: changepwd.c  changepwd.h  get_server_certs.c  getcertificate.c  getcertificate.h  getnextmsg.c  getnextmsg.h  hasmsg.c  hasmsg.h  isuservalid.c  isuservalid.h  server_handler.c  server_handler.h  setcertificate.c  setcertificate.h  storemsg.c  storemsg.h
single-container-server/: storemsg.c
(+16 files in other folders)
